2005-07-09  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpviewabledialog.c: ellipsize the name label.

2005-07-09  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcursorview.[ch]: added boolean "sample-merged"
	property, API and GUI. Pick from the active drawable if it's
	FALSE.

	* app/actions/Makefile.am
	* app/actions/actions.c
	* app/actions/cursor-info-actions.[ch]
	* app/actions/cursor-info-commands.[ch]: new files with actions
	and callbacks for the cursor info dialog's menu.

	* app/widgets/gimphelp-ids.h: help IDs for above actions.

	* app/actions/dialogs-actions.c
	* app/dialogs/dialogs.c: follow help ID change.

	* app/menus/menus.c
	* menus/Makefile.am
	* menus/cursor-info-menu.xml: add the cursor-info menu.

	* app/dialogs/dialogs-constructors.c: pass the menu factory to
	gimp_cursor_view_new().

2005-07-09  Sven Neumann  <sven@gimp.org>

	* app/base/segmentator.c: plugged memory leaks.

2005-07-08  Sven Neumann  <sven@gimp.org>

	* app/base/segmentator.c: minor cleanup, use a GQueue instead of a
	custom queue implementation.

2005-07-08  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcursorview.c (gimp_cursor_view_update_cursor):
	pass the color index value to gimp_color_frame_set_color() so it
	would show up in the frame if we actually picked from indexed
	things.

2005-07-08  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpclonetool.c: initialize the parent_class pointer
	with NULL.

2005-07-08  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpfiledialog.c (gimp_file_dialog_new): enable
	remote files: set local_only to FALSE if the PDB has
	"file_uri_load/save" procedures (yes, this is questionable).

2005-07-08  Michael Natterer  <mitch@gimp.org>

	* libgimpcolor/gimpbilinear.c
	* libgimpwidgets/gimppreviewarea.c: fix some uninitialized stuff
	gcc 4.0 was choking about.

2005-07-08  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimppageselector.c (gimp_page_selector_class_init):
	added and fixed some API docs.