@@ -1,3 +1,12 @@
+2005-07-09  Michael Natterer  <mitch@gimp.org>
+
+	* app/core/gimpimage-pick-color.c (gimp_image_pick_color): if
+	sample_merged is FALSE and drawable is NULL, just get the image's
+	active drawable instead of bailing out.
+
+	* app/widgets/gimpcursorview.c (gimp_cursor_view_update_cursor):
+	use gimp_image_pick_color() insted of duplicating its code.
+
 2005-07-09  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimpviewabledialog.c: ellipsize the name label.
